The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-07-06 DP        Prompt the user to cancel running queries before closing the Query tool.
    <li>2005-07-04 DP        Check for and display asynchronous notifications in the query tool.
    <li>2005-06-21 AP        typo fixes, rename "initial db" to "maintenance db"
    <li>2005-06-19 AP        pgAgent moved under server, some more fixes
    <li>2005-06-19 AP        further translation issues
    <li>2005-06-17 AP        reduce translation nightmare
    <li>2005-06-17 AP        use wxDatePickCtrl for wxCalendarBox
    <li>2005-06-17 AP  1.2.3 Fix changing initial db
    <li>2005-06-09 DP        Flash the task bar icon at the user if a query finishes and the query window is not active.
    <li>2005-06-09 AP        Different icons for own and foreign slony sets and subscriptions
    <li>2005-06-09 DP  1.2.3 Fix disable triggers option for data only plain text backups per Howard Cole.
    <li>2005-06-03 AP        Support for pgsql 8.1 aggregate sortop
    <li>2005-06-03 AP        Support for pgsql 8.1 pg_stat_activity
    <li>2005-06-03 AP        Support for pgsql 8.1 instrumentation
    <li>2005-06-01 AP        Support for Procedures aka functions "with out-parameters"
    <li>2005-06-01 AP        Support for EDB8.0
    <li>2005-05-31 DP  1.2.3 Fix domain RE SQL, per Ivan
    <li>2005-05-31 DP  1.2.3 Add missing ; to RE SQL, per Ivan
    <li>2005-05-27 DP        New WiX based installer for Win32
    <li>2005-05-25 DP        Cleanup doc location code for internal consistency